[package]
name = "hal"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "cli", "api-all"] }
serde = { version = "1", features = ["derive"] }

tokio = { version = "1.32.0", features = ["full"] }
serde_json = "1"
dirs-next = "2.0.0"
jomini = "0.25.5" # "0.22.2"
steamlocate = "1.2.1"
regex = "1.9.5"
log = "0.4.20"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
default = [ "custom-protocol" ]
custom-protocol = ["tauri/custom-protocol"]
